--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,41 @@ cmake_minimum_required(VERSION 3.13)
 # note: this must happen before project()
 include(pico-sdk/pico_sdk_init.cmake)
 
-project(my_project)
+project(main)
+
+set(CMAKE_C_STANDARD 11)
+
+# Export commands
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+add_compile_options(-Wall
+        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
+        -Wno-unused-function # we have some for the docs that aren't called
+        -Wno-maybe-uninitialized
+        )
 
 # initialize the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# rest of your project
-add_executable(main main.c)
+if (TARGET tinyusb_device)
+    add_executable(main
+            main.c
+            )
 
-target_link_libraries(main pico_stdlib)
+    # pull in common dependencies
+    target_link_libraries(main pico_stdlib)
+
+    # enable usb output, disable uart output
+    pico_enable_stdio_usb(main 1)
+    pico_enable_stdio_uart(main 0)
+
+    # create map/bin/hex/uf2 file etc.
+    pico_add_extra_outputs(main)
+
+    # add url via pico_set_program_url
+    #example_auto_set_url(main)
+elseif(PICO_ON_DEVICE)
+    message(WARNING "not building hello_usb because TinyUSB submodule is not initialized in the SDK")
+endif()
 
 pico_add_extra_outputs(main)
